# Simple-CRUD-Rust-APP

./: Cargo.toml
src/: main.rs  user_routes.rs  user_service.rs
