[package]
name = "simple-crud-app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
tokio = { version = "1", features = ["full"] }
log = "0.4"